setup entity factory

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/console": "^3.4|^4.0",
         "symfony/security-core": "^3.4|^4.0",
         "symfony/validator": "^3.4|^4.0",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "symfony/var-dumper": "^4.0@dev"
     },
     "config": {
         "preferred-install": {
