--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "ramsey/uuid": "^3.7",
         "simple-bus/message-bus": "^3.0",
         "symfony/console": "^3.4|^4.0",
+        "symfony/dependency-injection": "^3.4|^4.0",
         "symfony/security-core": "^3.4|^4.0",
         "symfony/validator": "^3.4|^4.0",
         "twig/twig": "^2.4",
