switch to symfony/phpunit-bridge

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,14 +15,18 @@
     </php>
 
     <testsuites>
-        <testsuite name="msgphp/main">
+        <testsuite name="msgphp/msgphp">
             <directory>./src/*/Tests/</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>src/</directory>
+            <directory>./src/</directory>
         </whitelist>
     </filter>
+
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+    </listeners>
 </phpunit>
