--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
     },
     "require-dev": {
         "doctrine/orm": "^2.5",
-        "phpunit/phpunit": "^6.4",
         "psr/log": "^1.0",
         "ramsey/uuid": "^3.7",
         "simple-bus/message-bus": "^3.0",
@@ -26,7 +25,8 @@
         "symfony/security-core": "^3.4|^4.0",
         "symfony/validator": "^3.4|^4.0",
         "twig/twig": "^2.4",
-        "symfony/var-dumper": "^4.0@dev"
+        "symfony/phpunit-bridge": "^3.4|^4.0",
+        "symfony/var-dumper": "^3.4|^4.0"
     },
     "config": {
         "preferred-install": {
