skip event/command messages in codecov

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,4 +1,5 @@
 comment: off
 ignore:
     - "src/*/Tests/"
-    - "src/{User,Eav}/{Command,Event}/*{Command,Event}.php"
+    - "src/*/Command/*Command.php"
+    - "src/*/Event/*Event.php"
