--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,3 +3,7 @@ ignore:
     - "src/*/Tests/"
     - "src/*/Command/*Command.php"
     - "src/*/Event/*Event.php"
+    - "src/*/Infra/Doctrine/Type/*Type.php"
+    - "src/Domain/Entity/CreatedAtFieldTrait.php"
+    - "src/Domain/Entity/LastUpdatedAtFieldTrait.php"
+    - "src/Domain/Infra/Bundle/ServiceConfigHelper.php"
