--- a/src/UserBundle/composer.json
+++ b/src/UserBundle/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "msgphp/user",
-    "type": "library",
+    "name": "msgphp/user-bundle",
+    "type": "symfony-bundle",
     "license": "MIT",
     "description": "User domain layer",
     "keywords": ["user", "security"],
@@ -13,28 +13,28 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "MsgPhp\\User\\": ""
+            "MsgPhp\\UserBundle\\": ""
         },
         "exclude-from-classmap": ["/Tests/"]
     },
     "require": {
-        "msgphp/domain": "^1.0"
+        "msgphp/user": "^1.0",
+        "symfony/config": "^3.4|^4.0",
+        "symfony/dependency-injection": "^3.4|^4.0",
+        "symfony/http-kernel": "^3.4|^4.0"
     },
     "require-dev": {
-        "doctrine/collections": "^1.5",
-        "doctrine/dbal": "^2.6",
-        "doctrine/orm": "^2.5",
-        "msgphp/eav": "^1.0",
-        "psr/log": "^1.0",
-        "ramsey/uuid": "^3.7",
-        "simple-bus/message-bus": "^3.0",
-        "symfony/console": "^3.4|^4.0",
-        "symfony/form": "^3.4|^4.0",
+        "doctrine/doctrine-bundle": "^1.8",
+        "simple-bus/symfony-bridge": "^4.1",
+        "symfony/framework-bundle": "^3.4|^4.0",
+        "symfony/security-bundle": "^3.4|^4.0",
+        "symfony/twig-bundle": "^3.4|^4.0",
         "symfony/phpunit-bridge": "^3.4|^4.0",
-        "symfony/security-core": "^3.4|^4.0",
         "symfony/validator": "^3.4|^4.0",
-        "symfony/var-dumper": "^3.4|^4.0",
-        "twig/twig": "^2.4"
+        "symfony/var-dumper": "^3.4|^4.0"
+    },
+    "suggest": {
+        "msgphp/eav-bundle": "To enable user attributes"
     },
     "config": {
         "preferred-install": {
