--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -11,6 +11,7 @@ $rules = [
     '@PHP70Migration:risky' => true,
     '@PHP71Migration' => true,
     '@PHP71Migration:risky' => true,
+    '@PHPUnit60Migration:risky' => true,
     'single_import_per_statement' => false,
 ];
 
