--- a/src/UserBundle/composer.json
+++ b/src/UserBundle/composer.json
@@ -25,7 +25,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^1.8",
-        "simple-bus/symfony-bridge": "^4.1",
+        "simple-bus/symfony-bridge": "^4.1|^5.0",
         "symfony/framework-bundle": "^3.4|^4.0",
         "symfony/security-bundle": "^3.4|^4.0",
         "symfony/twig-bundle": "^3.4|^4.0",
