fold travis output (#19)

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,9 @@ fast_finish: true
 before_script:
   - travis_retry composer self-update
 
+before_install:
+  - .travis/tfold
+
 install:
   - if [[ ! $DEPS  ]] ; then travis_retry bin/composer install $COMPOSER_ARGS ; fi
   - if [[ $DEPS = high ]] ; then travis_retry bin/composer update $COMPOSER_ARGS --prefer-stable ; fi
@@ -50,8 +53,8 @@ install:
 script:
   - if [[ ! $CC  ]] ; then bin/phpunit $PHPUNIT_ARGS ; fi
   - if [[ $CC = true ]] ; then bin/phpunit --coverage-clover=coverage.xml $PHPUNIT_ARGS ; fi
-  - if [[ $CS = true ]] ; then vendor/bin/php-cs-fixer fix --dry-run --verbose --diff src/ ; fi
-  - if [[ $SA = true ]] ; then vendor/bin/phpstan analyse --configuration phpstan.neon --level 7 src/ ; fi
+  - if [[ $CS = true ]] ; then bin/cs ; fi
+  - if [[ $SA = true ]] ; then bin/sa ; fi
 
 after_success:
   - if [[ $CC = true ]] ; then  .travis/codecov ; fi
