enable subtree split

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
         - CC=true
         - CS=true
         - SA=true
+        - SUBTREE_SPLIT=true
     - php: 7.2
       env:
         - DEPS=low
@@ -58,9 +59,9 @@ script:
 
 after_success:
   - if [[ $CC = true ]] ; then .travis/codecov ; fi
-  - if [[ $RELEASE = true ]] && [[ $TRAVIS_BRANCH = master ]] ; then bin/release $HOME/.releases/$TRAVIS_BRANCH ; fi
+  - if [[ $SUBTREE_SPLIT = true ]] && [[ $TRAVIS_BRANCH = master ]] ; then bin/subtree-split $HOME/.subtree-split/ ; fi
 
 cache:
   directories:
     - $HOME/.composer/cache/files/
-    - $HOME/.releases/
+    - $HOME/.subtree-split/
