--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,18 +11,8 @@ parameters:
         # see https://github.com/symfony/symfony/pull/25644
         - '#Strict comparison using === between null and string will always evaluate to false#'
 
-        # TreeBuilder type hinting bug
-        - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::children\(\)#'
-
-        # Needs investigation
-        - '#Calling method implementsInterface\(\) on possibly null value of type ReflectionClass|null#'
-
-        # Needs investigation
-        - '#Access to an undefined property MsgPhp\\Domain\\DomainIdInterface::\$uuid#'
-
     excludes_analyse:
         - '*/vendor/*'
 
-        # Ignoring as PHPStan doesn't know $container is passed into the config file:
-        # - 'Undefined variable: $container'
-        - 'src/UserBundle/Resources/config/simplebus.php'
+        # fluent interface
+        - '*/src/*Bundle/DependencyInjection/Configuration.php'
