--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,8 +11,8 @@ parameters:
         # see https://github.com/symfony/symfony/pull/25644
         - '#Strict comparison using === between null and string will always evaluate to false#'
 
+        # fluent mixed interface usage in src/*Bundle/DependencyInjection/Configuration.php
+        - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::append\(\)\.#'
+
     excludes_analyse:
         - '*/vendor/*'
-
-        # fluent interface
-        - '*/src/*Bundle/DependencyInjection/Configuration.php'
